--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,6 +13,15 @@
 			<h3>todos</h3>
 			
 			<h1>Sign in</h1>
+
+			<% if (hasMessages) { %>
+				<section class="messages">
+					<% messages.forEach(function(message) { %>
+					<p><%= message %></p>
+					<% }); %>
+				</section>
+				<% } %>
+
 <form action="/login/password" method="post">
     <section>
         <label for="username">Username</label>
